class variable typo

--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -5,12 +5,12 @@
 <% end %>
 
 <div id="wrap" class="events">
-  <% unless events.empty? %>
+  <% unless @events.empty? %>
     <ul class="events-list">
-    	<%= raw render_events events %>
+    	<%= raw render_events @events %>
   	</ul>
   <% else %>
   	<p class="info">Oops, couldn't find any events. Try being less specific about the type of event.</p>
   <% end %>
 </div>	
-<%= will_paginate events %>
+<%= will_paginate @events %>
