avoid render_events helper

--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -7,7 +7,9 @@
 <div id="wrap" class="events">
   <% unless events.empty? %>
     <ul class="events-list">
-    	<%= raw render_events events %>
+		<% events.each do |event| %>
+			<%= render :partial => 'events/event', :locals => { :event => event } %>
+		<% end %>
   	</ul>
   <% else %>
   	<p class="info">Oops, couldn't find any events. Try being less specific about the type of event.</p>
