--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -8,7 +8,7 @@
   <% unless events.empty? %>
     <ul class="events-list">
 		<% events.each do |event| %>
-			<%= render :partial => 'events/event', :locals => { :event => event } %>
+			<%= render :partial => 'events/event', :locals => { :event => event } unless event.blank? %>
 		<% end %>
   	</ul>
   <% else %>
