try debugging in view again

--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -8,6 +8,7 @@
   <% unless events.empty? %>
     <ul class="events-list">
 		<% events.each do |event| %>
+			<%= debug event %>
 			<%= render :partial => 'events/event', :locals => { :event => event } unless event.blank? %>
 		<% end %>
   	</ul>
