--- a/app/views/events/inline/_events_list.html.erb
+++ b/app/views/events/inline/_events_list.html.erb
@@ -1,19 +1,14 @@
-
-<% if events && @q %>
-	<h3 class="list-hd">Found <%= events.length %> events for "<%= @q %>"</h3>
-<% else %>
-	<h3 class="list-hd">Upcoming events in london</h3>
-<% end %>
+<%= render :partial => "events/event_list_heading", :locals => { :events => events } %>
 
 <div id="wrap" class="events">
   <% unless events.empty? %>
     <ul class="events-list">
 		<% events.each do |event| %>
-			<%= render :partial => 'events/event', :locals => { :event => event } unless event.blank? %>
+			<%= render :partial => "events/#{@list_type}event", :locals => { :event => event } %>
 		<% end %>
   	</ul>
   <% else %>
-  	<p class="info">Oops, couldn't find any events. Try being less specific about the type of event.</p>
+	<%= render :partial => "events/#{@list_type}event", :locals => { :event => event } %>
   <% end %>
 </div>	
 <%= will_paginate events %>
