--- a/app/views/events/_search.html.erb
+++ b/app/views/events/_search.html.erb
@@ -1,17 +1,17 @@
 <div id="search" <% if @q %>class="searched"<% end %>>
   <% unless @q %>
 	<div class="prompt">
-		Which events are you looking for? <span class="hint">Search by: title / topic / location / organiser.</span>
+		Which events are you looking for? <span class="hint">Search by: keywords, location and organiser.</span>
 	</div>
   <% else %>
   <% end %>
-  <% form_tag({:controller => 'events', :action => 'search'}, {:method =>'get'}) do  %>
+  <% form_tag({:controller => 'events', :action => 'filter'}, {:method =>'get'}) do  %>
     <%= text_field_tag :q, @q || '' %>
 	<button class="large-b scheme-2 awesome" type="submit">Find business events</button>
 	<div class="filters">
-	  <%= select_tag(:topic, options_for_select([['All Topics', '']] + Event.tags_humane(:topics).map{|t| t}, params[:topic] || nil)) %>
-	  <%= select_tag(:type, options_for_select([['All Event Types', '']] + Event.tags_humane(:types).map{|t| t}, params[:type] || nil)) %>
-	  <%= select_tag(:industry, options_for_select([['All Industries', '']] + Event.tags_humane(:industries).map{|t| t}, params[:industry] || nil)) %>
+	  <%= select_tag(:topic, options_for_select([['All Topics', ''], ['','']] + Event.tags_humane(:topics).map{|t| t}, params[:topic] || nil)) %>
+	  <%= select_tag(:type, options_for_select([['All Event Types', ''], ['','']] + Event.tags_humane(:types).map{|t| t}, params[:type] || nil)) %>
+	  <%= select_tag(:industry, options_for_select([['All Industries', ''], ['','']] + Event.tags_humane(:industries).map{|t| t}, params[:industry] || nil)) %>
 	</div>
   <% end %>
 </div> 
