--- a/public/stylesheets/application2.css
+++ b/public/stylesheets/application2.css
@@ -175,6 +175,10 @@ img.logo {
 	#search .filters {
 		margin: 2em 0 0 0;
 	}
+	#search select {
+		font-size: 1.2em;
+		height: 1.5em;
+	}
 	
 h3.list-hd {
 	color: #bbb;
