--- a/app/views/events/_events_list.html.erb
+++ b/app/views/events/_events_list.html.erb
@@ -1,16 +1,11 @@
-<% if events && @q %>
-	<h3 class="list-hd">Found <%= events.length %> events for "<%= @q %>"</h3>
-	<h1><strong><%= @events.length %></strong> upcoming events for topic <strong><%= params[:topic] %></strong> (<%= link_to "Show all events", root_path %>)</h1>
-<% else %>
+<% unless @q or params[:topic] or params[:type] or params[:industry] %>
 	<h3 class="list-hd">Upcoming events in london</h3>
-<% end %>
-<% if (params[:topic]) %>
-<% end %>
-
-<!-- include duplicate header for now until integrated with above -->
-<h2><%= verbalise_filters @events %></h2>
-<% unless SearchFilter.filter_index[:event_filter].current_filters.length == 0 %>
-  <p class='hint'><%= link_to "View all events", events_path %></p>  
+<% else %>
+	<!-- filter list heading -->
+	<h2><%= verbalise_filters @events %></h2>
+	<% unless SearchFilter.filter_index[:event_filter].current_filters.length == 0 %>
+	  <p class='hint'><%= link_to "View all events", events_path %></p>  
+	<% end %>
 <% end %>
 
 <div id="wrap" class="events">
