add copyright info to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,7 +104,7 @@
 		</div>
 	</div>
 
-   <div id="ft" role="contentinfo"><p>Footer</p></div>
+   <div id="ft" role="contentinfo"><p>Copyright <%= link_to "Cothink", "http://cothink.co.uk", :rel => "me" %> 2010</p></div>
 </div>
 <%= render :partial => 'layouts/uservoice' %>
 <%= render :partial => 'layouts/google_analytics' %>
