first go at a message box for the hello blurb

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
+<div id="messages">
+	<div class="highlight bigtext">
+		<h3>Hi there!</h3>
+		<p>Welcome to the site of awesome</p>
+	</div>
+</div>
+
 <%= render :partial => 'events/search' %>
 <%= render :partial => 'events/events_list', :locals => { :events => @events } %>
