rel=nofollow star links

--- a/app/views/events/_link_star.html.erb
+++ b/app/views/events/_link_star.html.erb
@@ -1,1 +1,1 @@
-<%= link_to raw('<span class="unstarred">' + event.starred.length.to_s + '</span>'), star_event_path(event), :class => "unstarred", :title => "Star this event", :remote => true %>
+<%= link_to raw('<span class="unstarred">' + event.starred.length.to_s + '</span>'), star_event_path(event), :rel => 'nofollow', :class => "unstarred", :title => "Star this event", :remote => true %>
