--- a/app/views/events/_link_unstar.html.erb
+++ b/app/views/events/_link_unstar.html.erb
@@ -1,1 +1,1 @@
-<%= link_to raw('<span class="starred">' + event.starred.length.to_s + '</span>'), unstar_event_path(event), :class => "starred", :title => "Unstar this event", :remote => true %>
+<%= link_to raw('<span class="starred">' + event.starred.length.to_s + '</span>'), unstar_event_path(event), :rel => 'nofollow', :class => "starred", :title => "Unstar this event", :remote => true %>
