change site title to include keywords

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
  xmlns:fb="http://www.facebook.com/2008/fbml">
 <html>
 <head>
-   	<title>The Business Diary</title>
+   	<title>The Business Diary - London Business Networking and Seminars</title>
 	
 	<link rel="stylesheet" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" type="text/css">
    	<link rel="stylesheet" type="text/css" href="/<%= assets %>/css/grid24.css" media="screen" />
