--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 						<img class="logo" alt="The Business Diary" src="/images/logo7.png">
 					</a>
 				</h1>
-				<p id="strapline">Meet. Connect. Learn.</p>
+				<p id="strapline">Meet new people, learn new skills.</p>
            </div>
            <div class="yui-u" id="user">
 				<%= render :partial => "layouts/auth_person" %>
