--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 	<div class="message highlight bigtext semi float right">
 		<h3>Give us feedback!</h3>
 		<p>We'd love to hear about <strong>your experiences</strong> of going to business events, how you find them and what would <strong>help you</strong> get more out of them.</p>
-		<a href="mailto:team@cothink.co.uk?subject=Business Diary - Suggest an event" class="large-b white awesome lower-right">Give us feedback on the site</a>		
+		<a href="http://spreadsheets0.google.com/viewform?hl=en_GB&formkey=dHBnbUQtTXpkaVBRbUxKV2lCeDhOREE6MQ#gid=0" class="large-b white awesome lower-right">Give us feedback on the site</a>		
 	</div>
 	<br class="clearboth" />
 </div>
