--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,17 @@
 <div id="messages">
 	<div class="highlight bigtext semi float left">
 		<p><strong>The Business Diary</strong> is a easy place to find business events, from <strong>networking</strong> to <strong>training courses</strong>.</p>
-		<p>We want to help you meet new people and learn new skills.</p>		
-		<a href="mailto:team@cothink.co.uk?subject=Business Diary - Site Feedback" class="large-b white awesome lower-right">Tell us about an event</a></p>
-		<p></p>
+		<p>
+			We want to help you meet new people and learn new skills.
+			<a href="mailto:team@cothink.co.uk?subject=Business Diary - Site Feedback" class="large-b white awesome lower-right">Tell us about an event</a>
+		</p>		
 	</div>
 	<div class="message highlight bigtext semi float right">
 		<h3>Give us feedback!</h3>
-		<p>We'd love to hear about <strong>your experiences</strong> of going to business events, how you find them and what would <strong>help you</strong> get more out of them.</p>
-		<a href="http://spreadsheets0.google.com/viewform?hl=en_GB&formkey=dHBnbUQtTXpkaVBRbUxKV2lCeDhOREE6MQ#gid=0" class="large-b white awesome lower-right">Give us feedback on the site</a>		
+		<p>
+			We'd love to hear about <strong>your experiences</strong> of going to business events, how you find them and what would <strong>help you</strong> get more out of them.
+			<a href="http://spreadsheets0.google.com/viewform?hl=en_GB&formkey=dHBnbUQtTXpkaVBRbUxKV2lCeDhOREE6MQ#gid=0" class="large-b white awesome lower-right">Give us feedback on the site</a>		
+		</p>
 	</div>
 	<br class="clearboth" />
 </div>
