stupid anchor breaking link style!!!

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,15 +3,15 @@
 		<p><strong>The Business Diary</strong> is a easy place to find business events, from <strong>networking</strong> to <strong>training courses</strong>.</p>
 		<p>
 			We want to help you meet new people and learn new skills.
-			<a href="mailto:team@cothink.co.uk?subject=Business Diary - Site Feedback" class="large-b white awesome lower-right">Tell us about an event</a>
 		</p>		
+		<a href="mailto:team@cothink.co.uk?subject=Business Diary - Site Feedback" class="large-b white awesome lower-right">Tell us about an event</a>
 	</div>
 	<div class="message highlight bigtext semi float right">
 		<h3>Give us feedback!</h3>
 		<p>
 			We'd love to hear about <strong>your experiences</strong> of going to business events, how you find them and what would <strong>help you</strong> get more out of them.
-			<a href="http://spreadsheets0.google.com/viewform?hl=en_GB&formkey=dHBnbUQtTXpkaVBRbUxKV2lCeDhOREE6MQ#gid=0" class="large-b white awesome lower-right">Give us feedback on the site</a>		
 		</p>
+		<a href="http://spreadsheets0.google.com/viewform?hl=en_GB&formkey=dHBnbUQtTXpkaVBRbUxKV2lCeDhOREE6MQ" class="large-b white awesome lower-right">Feedback on the site</a>
 	</div>
 	<br class="clearboth" />
 </div>
