dan's friday org progress

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
-<div id="messages">
+<div class="messages">
 	<div class="highlight bigtext semi float left">
 		<p><strong>The Business Diary</strong> is a easy place to find business events, from <strong>networking</strong> to <strong>training courses</strong>.</p>
 		<p>We want to help you meet new people and learn new skills.</p>		
-		<a href="mailto:team@cothink.co.uk?subject=Business Diary - Site Feedback" class="large-b white awesome ">Tell us about an event</a>
+		<a href="mailto:team@cothink.co.uk?subject=Business Diary - Site Feedback" class="large-b white awesome">Tell us about an event</a>
 	</div>
 	<div class="message highlight bigtext semi float right">
 		<h3>Give us feedback!</h3>
@@ -12,5 +12,7 @@
 	<br class="clearboth" />
 </div>
 
+
 <%= render :partial => 'events/search' %>
 <%= render :partial => 'events/events_list', :locals => { :events => @events } %>
+<%= render :partial => 'organisations/banner' %>
