--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -35,7 +35,7 @@
               </div>
           </div> -->
         <div class="yui-g">
-          <div id="messages">
+          <div class="messages">
 		
             <% if flash[:error] -%>
             <p class='error'>
