--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 	</div>
    	<div id="bd" role="main">
 		<div class="yui-g">
-	        <div id="messages">
+	        <div class="messages">
 				
 				<%
 				# DEVISE MESSAGES
