--- a/app/views/organisations/claim.html.erb
+++ b/app/views/organisations/claim.html.erb
@@ -1,1 +1,7 @@
 CLAIM
+
+<ul>
+	<li><%= link_to "invite", new_organisation_invitation_path %></li>
+	<li><%= link_to "register", new_organisation_registration_path %></li>
+	<li><%= link_to "sign in", new_organisation_session_path %></li>
+</ul>
